--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.45.1",
     "react-query": "^3.39.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
