--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "dayjs": "^1.11.9",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-chartjs-2": "^5.2.0",
